  rather than their pos_to in attackSkillSlot.
- Fixed multiple sitAuto sequences being queued.
- Fix the Win32 GUI interface.
- Fixed a bug where the weight command only allows a single digit parameter.
- Fixed a bug where kore immediately stands up when the player manually uses
  the 'sit' command.
- The 'sit' command no longer modifies any config options.

New features:
- dcOnDisconnect 2 will not disconnect when you run out of paid time
  now, because this is an intermittent error condition that happens on
  some buggy private servers.
- Added 'manual' AI mode, so you can still use most console commands while
  automatic AI is off.
- An empty adminPassword disables all authentication schemes to control Kore
- Manual move commands (east, west, north, south, etc) now take an optional
  'distance' parameter.

New config options:
- autoMoveOnDeath set:
	autoMoveOnDeath <0/1>
	autoMoveOnDeath_x <INT>
	autoMoveOnDeath_y <INT>
	autoMoveOnDeath_map <MAP>
- serverEncoding
  Specifies the server's character encoding (language). Should be one of:
     Western
     Tagalog
     Chinese
     Korean
     Russian
     Cyrillic
     Japanese
     Thai
- New checkSelfCondition _whenEquipped <item>. True iff the named item
  is equipped.
- debugPacket_received 3 will print what openkore interpreted each parameter
  in the packet as.
- XKore 2: (manual at http://openkore.sourceforge.net/manual/xkore2.php )
	XKore_ID
	XKore_publicIp
	XKore_listenIp
	XKore_listenPort
- removeActorWithDistance
- route_randomWalk_inTown

New commands:
- cart release: remove cart status
- falcon [release]: Display or remove falcon status
- pecopeco [release]: Display or remove pecopeco status
- ai manual: Pause automated botting and allow manual control
- ai auto: Same as 'ai on'

Internal:
- Implemented the beginning of a localization framework.
- Actor::get($ID) now returns $players{$ID} instead of $monsters{$ID}
  when both exist (which shouldn't happen, but this is a workaround for